--- a/sealfood/src/App.css
+++ b/sealfood/src/App.css
@@ -1,38 +1,113 @@
+
 .App {
+  width: 100%;
+  height: 100%;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.FoodsTypes {
+  margin-top: 10%;
+  margin-left: 25%;
+  width: 50%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+}
+.FoodType {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  border: 1px solid black;
+  transition: box-shadow .3s;
+  border: 1px solid #ccc;
+  background: #fff;
+  
+}
+.FoodType:hover {
+  box-shadow: 0 0 11px rgba(33,33,33,.2); 
 }
 
-.App-link {
-  color: #61dafb;
+.FoodType > .Type {
+  margin-top: 100px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.App > button {
+  margin-top: 40px;
+}
+
+
+@import url("https://fonts.googleapis.com/css?family=Roboto");
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+  list-style-type: none;
+  text-decoration: none;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+.card {
+  position: relative;
+  height: 400px;
+  background: #fff;
+  width: 300px;
+  margin: 20px auto;
+  box-shadow: 0px 0px 30px 2px #000;
+}
+.card .header {
+  position: relative;
+  background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg") no-repeat center;
+  background-size: cover;
+  height: 200px;
+}
+
+.card .text .food {
+  color: #212129;
+  text-align: left;
+  font-weight: normal;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  margin: 5px 30px;
+}
+.card .text .fa-clock-o {
+  color: #9B9B9B;
+  margin: 0 30px;
+}
+.card .text .fa-users {
+  color: #9B9B9B;
+}
+.card .stars {
+  margin: 10px 30px;
+}
+.card .stars li a i {
+  color: #FFE500;
+}
+.card .info {
+  margin: 10px 30px;
+}
+.card a.btn {
+  display: block;
+  background: #EF3E36;
+  color: #fff;
+  position: relative;
+  text-transform: uppercase;
+  letter-spacing: 0.1em;
+  text-align: center;
+  padding: 10px;
+  transition: 250ms;
+}
+.card a.btn:hover {
+  background: #17BEBB;
+  transition: 250ms;
+}
+
+.Recipes {
+  display: grid;
+}
+
+.Recipes > .Recipe {
+  width: 100px;
 }
