--- a/sealfood/src/App.css
+++ b/sealfood/src/App.css
@@ -1,38 +1,76 @@
 
+@import url('https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap');
+body,html {
+  margin: none;
+  padding: none;
+  width: 100%;
+  height: 700px;
+ background-color: rgb(202, 173, 214) !important;
+ overflow: hidden
+  
+}
+
 .App {
+  margin: 0;
+  padding: 0;
+  text-align: center;
+
+}
+
+
+.FoodsTypes {
+ 
+  margin: 4% 15%;
+  width: 70%;
+  display: flex;
+  justify-content: space-between;
+}
+
+.FoodType:hover {
+  box-shadow: 2px 0 11px rgba(33,33,33,.2); 
+}
+
+.FoodType {
+  
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  transition: box-shadow .3s;
+  border: 1px solid #fff;
+  background: #fff;
+}
+
+.FoodType > img {
+  width: 100%;
+  height: 100%;
+  transform: scale(1.3);
+  transform-origin: center;
+  
+  
+}
+
+.FoodType > .Type {
+  margin-top: 10%;
+}
+
+
+
+.Home {
+  margin: 0;
+  padding: 0;
   width: 100%;
   height: 100%;
   text-align: center;
 }
 
+.Home > h1 {
+  margin-top: 4%;
+  font-family: 'Sigmar One', cursive;
 
-.FoodsTypes {
-  margin-top: 10%;
-  margin-left: 25%;
-  width: 50%;
-  display: flex;
-  justify-content: space-between;
+  color: #fff;
 }
-.FoodType {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  border: 1px solid black;
-  transition: box-shadow .3s;
-  border: 1px solid #ccc;
-  background: #fff;
-  
-}
-.FoodType:hover {
-  box-shadow: 0 0 11px rgba(33,33,33,.2); 
-}
-
-.FoodType > .Type {
-  margin-top: 100px;
-}
-
-.App > button {
-  margin-top: 40px;
+.Home > input {
+  margin-top: 4%;
 }
 
 
