--- a/sealfood/src/App.css
+++ b/sealfood/src/App.css
@@ -1,13 +1,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Sigmar+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+
 body,html {
   margin: none;
   padding: none;
   width: 100%;
   height: 700px;
- background-color: rgb(202, 173, 214) !important;
- overflow: hidden
-  
+  background-image: url(https://media.istockphoto.com/photos/top-view-of-set-of-plastic-fork-and-spoon-isolated-on-blue-picture-id686938208?k=6&m=686938208&s=612x612&w=0&h=x_fzlTAVtm7No5b-_Jf16FoemEecisNvDoBvWaJtnaQ=);
+  background-size: 50%; 
+}
+
+.time {
+  margin-top: 20px;
 }
 
 .App {
@@ -31,7 +37,7 @@ body,html {
 }
 
 .FoodType {
-  
+  cursor: pointer;
   width: 200px;
   height: 200px;
   border-radius: 50%;
@@ -73,6 +79,13 @@ body,html {
   margin-top: 4%;
 }
 
+.Home > .cookingTime {
+  font-family: 'Amatic SC', cursive;
+  color: #fff;
+  margin-left: 12px;
+  font-size: 120px;
+}
+
 
 @import url("https://fonts.googleapis.com/css?family=Roboto");
 * {
@@ -92,14 +105,19 @@ body,html {
   height: 400px;
   background: #fff;
   width: 300px;
-  margin: 20px auto;
+
   box-shadow: 0px 0px 30px 2px #000;
 }
 .card .header {
   position: relative;
-  background: url("http://img.taste.com.au/UZVXAdo7/taste/2016/11/chinese-egg-noodle-and-vegetable-stir-fry-94186-1.jpeg") no-repeat center;
-  background-size: cover;
   height: 200px;
+}
+
+.card .header img {
+  position: relative;
+  width: 100%;
+  height: 200px;
+  overflow: hidden;
 }
 
 .card .text .food {
@@ -143,9 +161,18 @@ body,html {
 }
 
 .Recipes {
+  margin-top: 100px;
   display: grid;
 }
 
 .Recipes > .Recipe {
   width: 100px;
+}
+
+.col {
+  margin: 60px;
+}
+
+.row {
+  margin-top: 60px;
 }
