--- a/sealfood/src/App.css
+++ b/sealfood/src/App.css
@@ -3,17 +3,23 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
 
+html {
+  background-image: url(https://media.istockphoto.com/photos/top-view-of-set-of-plastic-fork-and-spoon-isolated-on-blue-picture-id686938208?k=6&m=686938208&s=612x612&w=0&h=x_fzlTAVtm7No5b-_Jf16FoemEecisNvDoBvWaJtnaQ=);
+
+}
 body,html {
   margin: none;
   padding: none;
   width: 100%;
-  height: 700px;
-  background-image: url(https://media.istockphoto.com/photos/top-view-of-set-of-plastic-fork-and-spoon-isolated-on-blue-picture-id686938208?k=6&m=686938208&s=612x612&w=0&h=x_fzlTAVtm7No5b-_Jf16FoemEecisNvDoBvWaJtnaQ=);
-  background-size: 50%; 
+  height: 100%;
 }
 
 .time {
   margin-top: 20px;
+  width: 100px;
+  padding: 10px;
+  border-radius: 5px;
+  border: 2px solid rgb(194, 189, 189);
 }
 
 .App {
@@ -42,8 +48,11 @@ body,html {
   height: 200px;
   border-radius: 50%;
   transition: box-shadow .3s;
-  border: 1px solid #fff;
   background: #fff;
+}
+
+.choose {
+  border: 4px solid red;
 }
 
 .FoodType > img {
@@ -51,12 +60,14 @@ body,html {
   height: 100%;
   transform: scale(1.3);
   transform-origin: center;
-  
-  
 }
 
 .FoodType > .Type {
   margin-top: 10%;
+  font-family: 'Amatic SC', cursive;
+  font-size: 50px;
+  font-weight: 900;
+  color: #fff;
 }
 
 
@@ -70,13 +81,14 @@ body,html {
 }
 
 .Home > h1 {
-  margin-top: 4%;
+  margin-right: 90px;
+  margin-top: 1%;
   font-family: 'Sigmar One', cursive;
 
   color: #fff;
 }
 .Home > input {
-  margin-top: 4%;
+  margin-bottom: 10px;
 }
 
 .Home > .cookingTime {
@@ -84,6 +96,10 @@ body,html {
   color: #fff;
   margin-left: 12px;
   font-size: 120px;
+}
+
+.Home > button {
+  margin-top: 70px;
 }
 
 
@@ -122,15 +138,17 @@ body,html {
 
 .card .text .food {
   color: #212129;
-  text-align: left;
+  text-align: center;
   font-weight: normal;
   text-transform: uppercase;
   letter-spacing: 0.1em;
-  margin: 5px 30px;
+  margin-top: 11px;
 }
 .card .text .fa-clock-o {
-  color: #9B9B9B;
-  margin: 0 30px;
+  text-align: center;
+  color: #5c5c5c;
+  margin-right: 130px;
+  font-family: 'Amatic SC', cursive;
 }
 .card .text .fa-users {
   color: #9B9B9B;
@@ -161,6 +179,8 @@ body,html {
 }
 
 .Recipes {
+  width: 100%;
+  height: 100%;
   margin-top: 100px;
   display: grid;
 }
@@ -169,10 +189,40 @@ body,html {
   width: 100px;
 }
 
+.Recipe > a,p,h5 {
+  font-size: larger;
+  font-family: 'Amatic SC', cursive;
+}
+
+
 .col {
   margin: 60px;
 }
 
 .row {
   margin-top: 60px;
+}
+
+.popup {
+  width:700px;
+  height: 500px;
+  background-color: whitesmoke;
+  margin: auto;
+  margin-top: 170px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 30px 2px #000;
+  
+}
+
+.display {
+  width: 100%;
+  height: 100%;
+}
+
+.Logo {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  float: left;
+  margin-left: 25px;
 }
