--- a/sealfood/src/index.css
+++ b/sealfood/src/index.css
@@ -1,13 +1,15 @@
-body {
+
+body,html {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('https://media.istockphoto.com/photos/top-view-of-set-of-plastic-fork-and-spoon-isolated-on-blue-picture-id686938208?k=6&m=686938208&s=612x612&w=0&h=x_fzlTAVtm7No5b-_Jf16FoemEecisNvDoBvWaJtnaQ=');
+
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+#root {
+  width: 100%;
+  height: 100%;
 }
+
